@@ -1,6 +1,10 @@
 2006-09-16  Paolo Borelli  <pborelli@katamail.com>
 
-	* src/baobab.c: plug a leak.
+	* src/baobab.c:
+	* src/baobab-utils.c:
+	* src/baobab-treeview.c:
+
+	plug leaks.
 
 2006-09-09  Dennis Cranston  <dennis_cranston@yahoo.com>
 
